# langchain_gordon_experiments

./: INSTALL.md  README.md  pyproject.toml
gpt4all/: flask_client.py  short_example.py
gpt4all/client-server/: docker-compose.yml  flask_client.py  flask_server.py
gpt4all/working_code/: capital_of_france.py  local_docs.py  server.py  streaming.py  utils.py
open_source_LLM_experiments/: README.md  chat_mistral.py  generic_utils.py  hawkings_smolin.txt  hawkings_smolin_version2.txt  my_langchain_cpu.py  my_langchain_gpu.py  universal_metaprompt.txt  utils.py
zephyr_experiments/: HF_zephyr.py  NOTES_GE  PIP_INSTALLS.md  README.md  README_grammars.md  a.py  aa.py  chat_mistral.py  d.py  e.py  einstein_vs_newton.txt  experiment_with_jinja2.py  generic_two_way_conversation.py  generic_utils.py  metaprompts.ipynb  my_langchain_cpu.py  my_langchain_gpu.py  scenario_hawking_smolin.yaml  t.py  two-way-conversation_mistral.py
